Agregadas cajas de texto response y request.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,9 +35,21 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CourseRoom_Server
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout-RELEASE126.jar=libraries\\libs\\AbsoluteLayout-RELEASE126.jar
+file.reference.flatlaf-1.6.5.jar=libraries\\libs\\flatlaf-1.6.5.jar
+file.reference.ws-commons-util-1.0.2.jar=libraries\\libs\\ws-commons-util-1.0.2.jar
+file.reference.xmlrpc-client-3.1.3.jar=libraries\\libs\\xmlrpc-client-3.1.3.jar
+file.reference.xmlrpc-common-3.1.3.jar=libraries\\libs\\xmlrpc-common-3.1.3.jar
+file.reference.xmlrpc-server-3.1.3.jar=libraries\\libs\\xmlrpc-server-3.1.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.AbsoluteLayout-RELEASE126.jar}:\
+    ${file.reference.flatlaf-1.6.5.jar}:\
+    ${file.reference.ws-commons-util-1.0.2.jar}:\
+    ${file.reference.xmlrpc-client-3.1.3.jar}:\
+    ${file.reference.xmlrpc-common-3.1.3.jar}:\
+    ${file.reference.xmlrpc-server-3.1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,6 +75,9 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.flatlaf-1.6.5.jar=libraries/javadocs/flatlaf-1.6.5-javadoc.jar
+javadoc.reference.xmlrpc-common-3.1.3.jar=libraries/javadocs/xmlrpc-common-3.1.3-javadoc.jar
+javadoc.reference.xmlrpc-server-3.1.3.jar=libraries/javadocs/xmlrpc-server-3.1.3-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -93,5 +108,8 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
+source.reference.flatlaf-1.6.5.jar=libraries/sources/flatlaf-1.6.5-sources.jar
+source.reference.xmlrpc-common-3.1.3.jar=libraries/sources/xmlrpc-common-3.1.3-sources.jar
+source.reference.xmlrpc-server-3.1.3.jar=libraries/sources/xmlrpc-server-3.1.3-sources.jar
 src.dir=src
 test.src.dir=test
