Agregada vista peticiones y respuestas

--- a/libraries/nblibraries.properties
+++ b/libraries/nblibraries.properties
@@ -2,3 +2,9 @@ libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=3.0
+libs.JideOSS.classpath=\
+    ${base}/JideOSS/jide-oss-3.6.18.jar
+libs.JideOSS.javadoc=\
+    ${base}/JideOSS/jide-oss-3.6.18-javadoc.jar!//
+libs.JideOSS.src=\
+    ${base}/JideOSS/jide-oss-3.6.18-sources.jar!//
