--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,7 +49,8 @@ javac.classpath=\
     ${file.reference.ws-commons-util-1.0.2.jar}:\
     ${file.reference.xmlrpc-client-3.1.3.jar}:\
     ${file.reference.xmlrpc-common-3.1.3.jar}:\
-    ${file.reference.xmlrpc-server-3.1.3.jar}
+    ${file.reference.xmlrpc-server-3.1.3.jar}:\
+    ${libs.JideOSS.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
