--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,21 +40,11 @@ file.reference.commons-io-2.11.0.jar=libraries\\libs\\commons-io-2.11.0.jar
 file.reference.commons-lang3-3.12.0.jar=libraries\\libs\\commons-lang3-3.12.0.jar
 file.reference.commons-logging-1.2.jar=libraries\\libs\\commons-logging-1.2.jar
 file.reference.flatlaf-1.6.5.jar=libraries\\libs\\flatlaf-1.6.5.jar
-file.reference.jackson-annotations-2.13.1.jar=libraries\\libs\\jackson-annotations-2.13.1.jar
-file.reference.jackson-core-2.13.1.jar=libraries\\libs\\jackson-core-2.13.1.jar
-file.reference.jackson-databind-2.13.1.jar=libraries\\libs\\jackson-databind-2.13.1.jar
 file.reference.javafaker-1.0.2.jar=libraries\\libs\\javafaker-1.0.2.jar
 file.reference.javax.activation-1.2.0.jar=libraries\\libs\\javax.activation-1.2.0.jar
 file.reference.javax.mail-1.6.2.jar=libraries\\libs\\javax.mail-1.6.2.jar
-file.reference.jfreechart-1.5.3.jar=libraries\\libs\\jfreechart-1.5.3.jar
-file.reference.jna-5.10.0.jar=libraries\\libs\\jna-5.10.0.jar
-file.reference.jna-jpms-5.10.0.jar=libraries\\libs\\jna-jpms-5.10.0.jar
-file.reference.jna-platform-5.10.0-jpms.jar=libraries\\libs\\jna-platform-5.10.0-jpms.jar
-file.reference.jna-platform-5.10.0.jar=libraries\\libs\\jna-platform-5.10.0.jar
 file.reference.mysql-connector-java-8.0.27.jar=libraries\\libs\\mysql-connector-java-8.0.27.jar
 file.reference.oshi-core-5.8.5.jar=libraries\\libs\\oshi-core-5.8.5.jar
-file.reference.slf4j-api-1.7.32.jar=libraries\\libs\\slf4j-api-1.7.32.jar
-file.reference.slf4j-simple-1.7.32.jar=libraries\\libs\\slf4j-simple-1.7.32.jar
 file.reference.snakeyaml-1.29.jar=libraries\\libs\\snakeyaml-1.29.jar
 file.reference.ws-commons-util-1.0.2.jar=libraries\\libs\\ws-commons-util-1.0.2.jar
 file.reference.xmlrpc-client-3.1.3.jar=libraries\\libs\\xmlrpc-client-3.1.3.jar
@@ -78,17 +68,7 @@ javac.classpath=\
     ${file.reference.snakeyaml-1.29.jar}:\
     ${file.reference.commons-io-2.11.0.jar}:\
     ${file.reference.commons-lang3-3.12.0.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.jfreechart-1.5.3.jar}:\
-    ${file.reference.jackson-core-2.13.1.jar}:\
-    ${file.reference.jackson-databind-2.13.1.jar}:\
-    ${file.reference.jna-5.10.0.jar}:\
-    ${file.reference.jna-jpms-5.10.0.jar}:\
-    ${file.reference.jna-platform-5.10.0-jpms.jar}:\
-    ${file.reference.jna-platform-5.10.0.jar}:\
-    ${file.reference.slf4j-api-1.7.32.jar}:\
-    ${file.reference.slf4j-simple-1.7.32.jar}:\
-    ${file.reference.jackson-annotations-2.13.1.jar}
+    ${file.reference.commons-logging-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -118,19 +98,10 @@ javadoc.reference.commons-io-2.11.0.jar=libraries/javadocs/commons-io-2.11.0-jav
 javadoc.reference.commons-lang3-3.12.0.jar=libraries/javadocs/commons-lang3-3.12.0-javadoc.jar
 javadoc.reference.commons-logging-1.2.jar=libraries/javadocs/commons-logging-1.2-javadoc.jar
 javadoc.reference.flatlaf-1.6.5.jar=libraries/javadocs/flatlaf-1.6.5-javadoc.jar
-javadoc.reference.jackson-annotations-2.13.1.jar=libraries/javadocs/jackson-annotations-2.13.1-javadoc.jar
-javadoc.reference.jackson-core-2.13.1.jar=libraries/javadocs/jackson-core-2.13.1-javadoc.jar
-javadoc.reference.jackson-databind-2.13.1.jar=libraries/javadocs/jackson-databind-2.13.1-javadoc.jar
 javadoc.reference.javafaker-1.0.2.jar=libraries/javadocs/javafaker-1.0.2-javadoc.jar
 javadoc.reference.javax.activation-1.2.0.jar=libraries/javadocs/javax.activation-1.2.0-javadoc.jar
 javadoc.reference.javax.mail-1.6.2.jar=libraries/javadocs/javax.mail-1.6.2-javadoc.jar
-javadoc.reference.jfreechart-1.5.3.jar=libraries/javadocs/jfreechart-1.5.3-javadoc.jar
-javadoc.reference.jna-5.10.0.jar=libraries/javadocs/jna-5.10.0-javadoc.jar
-javadoc.reference.jna-jpms-5.10.0.jar=libraries/javadocs/jna-jpms-5.10.0-javadoc.jar
-javadoc.reference.jna-platform-5.10.0.jar=libraries/javadocs/jna-platform-5.10.0-javadoc.jar
 javadoc.reference.oshi-core-5.8.5.jar=libraries/javadocs/oshi-core-5.8.5-javadoc.jar
-javadoc.reference.slf4j-api-1.7.32.jar=libraries/javadocs/slf4j-api-1.7.32-javadoc.jar
-javadoc.reference.slf4j-simple-1.7.32.jar=libraries/javadocs/slf4j-simple-1.7.32-javadoc.jar
 javadoc.reference.snakeyaml-1.29.jar=libraries/javadocs/snakeyaml-1.29-javadoc.jar
 javadoc.reference.xmlrpc-common-3.1.3.jar=libraries/javadocs/xmlrpc-common-3.1.3-javadoc.jar
 javadoc.reference.xmlrpc-server-3.1.3.jar=libraries/javadocs/xmlrpc-server-3.1.3-javadoc.jar
@@ -168,20 +139,11 @@ source.reference.commons-io-2.11.0.jar=libraries/sources/commons-io-2.11.0-sourc
 source.reference.commons-lang3-3.12.0.jar=libraries/sources/commons-lang3-3.12.0-sources.jar
 source.reference.commons-logging-1.2.jar=libraries/sources/commons-logging-1.2-sources.jar
 source.reference.flatlaf-1.6.5.jar=libraries/sources/flatlaf-1.6.5-sources.jar
-source.reference.jackson-annotations-2.13.1.jar=libraries/sources/jackson-annotations-2.13.1-sources.jar
-source.reference.jackson-core-2.13.1.jar=libraries/sources/jackson-core-2.13.1-sources.jar
-source.reference.jackson-databind-2.13.1.jar=libraries/sources/jackson-databind-2.13.1-sources.jar
 source.reference.javafaker-1.0.2.jar=libraries/sources/javafaker-1.0.2-sources.jar
 source.reference.javax.activation-1.2.0.jar=libraries/sources/javax.activation-1.2.0-sources.jar
 source.reference.javax.mail-1.6.2.jar=libraries/sources/javax.mail-1.6.2-sources.jar
-source.reference.jfreechart-1.5.3.jar=libraries/sources/jfreechart-1.5.3-sources.jar
-source.reference.jna-5.10.0.jar=libraries/sources/jna-5.10.0-sources.jar
-source.reference.jna-jpms-5.10.0.jar=libraries/sources/jna-jpms-5.10.0-sources.jar
-source.reference.jna-platform-5.10.0.jar=libraries/sources/jna-platform-5.10.0-sources.jar
 source.reference.mysql-connector-java-8.0.27.jar=libraries/sources/mysql-connector-java-8.0.27-sources.jar
 source.reference.oshi-core-5.8.5.jar=libraries/sources/oshi-core-5.8.5-sources.jar
-source.reference.slf4j-api-1.7.32.jar=libraries/sources/slf4j-api-1.7.32-sources.jar
-source.reference.slf4j-simple-1.7.32.jar=libraries/sources/slf4j-simple-1.7.32-sources.jar
 source.reference.snakeyaml-1.29.jar=libraries/sources/snakeyaml-1.29-sources.jar
 source.reference.xmlrpc-common-3.1.3.jar=libraries/sources/xmlrpc-common-3.1.3-sources.jar
 source.reference.xmlrpc-server-3.1.3.jar=libraries/sources/xmlrpc-server-3.1.3-sources.jar
