--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,7 @@ file.reference.flatlaf-1.6.5.jar=libraries\\libs\\flatlaf-1.6.5.jar
 file.reference.javafaker-1.0.2.jar=libraries\\libs\\javafaker-1.0.2.jar
 file.reference.javax.activation-1.2.0.jar=libraries\\libs\\javax.activation-1.2.0.jar
 file.reference.javax.mail-1.6.2.jar=libraries\\libs\\javax.mail-1.6.2.jar
-file.reference.mysql-connector-java-8.0.27.jar=libraries\\libs\\mysql-connector-java-8.0.27.jar
+file.reference.mysql-connector-java-8.0.28.jar=libraries\\libs\\mysql-connector-java-8.0.28.jar
 file.reference.snakeyaml-1.29.jar=libraries\\libs\\snakeyaml-1.29.jar
 file.reference.ws-commons-util-1.0.2.jar=libraries\\libs\\ws-commons-util-1.0.2.jar
 file.reference.xmlrpc-client-3.1.3.jar=libraries\\libs\\xmlrpc-client-3.1.3.jar
@@ -62,11 +62,11 @@ javac.classpath=\
     ${file.reference.javafaker-1.0.2.jar}:\
     ${file.reference.javax.activation-1.2.0.jar}:\
     ${file.reference.javax.mail-1.6.2.jar}:\
-    ${file.reference.mysql-connector-java-8.0.27.jar}:\
     ${file.reference.snakeyaml-1.29.jar}:\
     ${file.reference.commons-io-2.11.0.jar}:\
     ${file.reference.commons-lang3-3.12.0.jar}:\
-    ${file.reference.commons-logging-1.2.jar}
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.mysql-connector-java-8.0.28.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -139,7 +139,7 @@ source.reference.flatlaf-1.6.5.jar=libraries/sources/flatlaf-1.6.5-sources.jar
 source.reference.javafaker-1.0.2.jar=libraries/sources/javafaker-1.0.2-sources.jar
 source.reference.javax.activation-1.2.0.jar=libraries/sources/javax.activation-1.2.0-sources.jar
 source.reference.javax.mail-1.6.2.jar=libraries/sources/javax.mail-1.6.2-sources.jar
-source.reference.mysql-connector-java-8.0.27.jar=libraries/sources/mysql-connector-java-8.0.27-sources.jar
+source.reference.mysql-connector-java-8.0.28.jar=libraries/sources/mysql-connector-java-8.0.28-sources.jar
 source.reference.snakeyaml-1.29.jar=libraries/sources/snakeyaml-1.29-sources.jar
 source.reference.xmlrpc-common-3.1.3.jar=libraries/sources/xmlrpc-common-3.1.3-sources.jar
 source.reference.xmlrpc-server-3.1.3.jar=libraries/sources/xmlrpc-server-3.1.3-sources.jar
