--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,28 +36,21 @@ dist.jlink.output=${dist.jlink.dir}/CourseRoom_Server
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout-RELEASE126.jar=libraries\\libs\\AbsoluteLayout-RELEASE126.jar
+file.reference.commons-codec-1.15.jar=libraries\\libs\\commons-codec-1.15.jar
 file.reference.commons-io-2.11.0.jar=libraries\\libs\\commons-io-2.11.0.jar
 file.reference.commons-lang3-3.12.0.jar=libraries\\libs\\commons-lang3-3.12.0.jar
-file.reference.commons-logging-1.2.jar=libraries\\libs\\commons-logging-1.2.jar
 file.reference.flatlaf-1.6.5.jar=libraries\\libs\\flatlaf-1.6.5.jar
 file.reference.javafaker-1.0.2.jar=libraries\\libs\\javafaker-1.0.2.jar
 file.reference.javax.activation-1.2.0.jar=libraries\\libs\\javax.activation-1.2.0.jar
 file.reference.javax.mail-1.6.2.jar=libraries\\libs\\javax.mail-1.6.2.jar
 file.reference.mysql-connector-java-8.0.28.jar=libraries\\libs\\mysql-connector-java-8.0.28.jar
 file.reference.snakeyaml-1.29.jar=libraries\\libs\\snakeyaml-1.29.jar
-file.reference.ws-commons-util-1.0.2.jar=libraries\\libs\\ws-commons-util-1.0.2.jar
-file.reference.xmlrpc-client-3.1.3.jar=libraries\\libs\\xmlrpc-client-3.1.3.jar
-file.reference.xmlrpc-common-3.1.3.jar=libraries\\libs\\xmlrpc-common-3.1.3.jar
-file.reference.xmlrpc-server-3.1.3.jar=libraries\\libs\\xmlrpc-server-3.1.3.jar
+file.reference.xmlrpc-2.0.1.jar=libraries\\libs\\xmlrpc-2.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.AbsoluteLayout-RELEASE126.jar}:\
     ${file.reference.flatlaf-1.6.5.jar}:\
-    ${file.reference.ws-commons-util-1.0.2.jar}:\
-    ${file.reference.xmlrpc-client-3.1.3.jar}:\
-    ${file.reference.xmlrpc-common-3.1.3.jar}:\
-    ${file.reference.xmlrpc-server-3.1.3.jar}:\
     ${libs.JideOSS.classpath}:\
     ${file.reference.javafaker-1.0.2.jar}:\
     ${file.reference.javax.activation-1.2.0.jar}:\
@@ -65,8 +58,9 @@ javac.classpath=\
     ${file.reference.snakeyaml-1.29.jar}:\
     ${file.reference.commons-io-2.11.0.jar}:\
     ${file.reference.commons-lang3-3.12.0.jar}:\
-    ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.mysql-connector-java-8.0.28.jar}
+    ${file.reference.mysql-connector-java-8.0.28.jar}:\
+    ${file.reference.xmlrpc-2.0.1.jar}:\
+    ${file.reference.commons-codec-1.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -92,16 +86,14 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.commons-codec-1.15.jar=libraries/javadocs/commons-codec-1.15-javadoc.jar
 javadoc.reference.commons-io-2.11.0.jar=libraries/javadocs/commons-io-2.11.0-javadoc.jar
 javadoc.reference.commons-lang3-3.12.0.jar=libraries/javadocs/commons-lang3-3.12.0-javadoc.jar
-javadoc.reference.commons-logging-1.2.jar=libraries/javadocs/commons-logging-1.2-javadoc.jar
 javadoc.reference.flatlaf-1.6.5.jar=libraries/javadocs/flatlaf-1.6.5-javadoc.jar
 javadoc.reference.javafaker-1.0.2.jar=libraries/javadocs/javafaker-1.0.2-javadoc.jar
 javadoc.reference.javax.activation-1.2.0.jar=libraries/javadocs/javax.activation-1.2.0-javadoc.jar
 javadoc.reference.javax.mail-1.6.2.jar=libraries/javadocs/javax.mail-1.6.2-javadoc.jar
 javadoc.reference.snakeyaml-1.29.jar=libraries/javadocs/snakeyaml-1.29-javadoc.jar
-javadoc.reference.xmlrpc-common-3.1.3.jar=libraries/javadocs/xmlrpc-common-3.1.3-javadoc.jar
-javadoc.reference.xmlrpc-server-3.1.3.jar=libraries/javadocs/xmlrpc-server-3.1.3-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -132,16 +124,15 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
+source.reference.commons-codec-1.15.jar=libraries/sources/commons-codec-1.15-sources.jar
 source.reference.commons-io-2.11.0.jar=libraries/sources/commons-io-2.11.0-sources.jar
 source.reference.commons-lang3-3.12.0.jar=libraries/sources/commons-lang3-3.12.0-sources.jar
-source.reference.commons-logging-1.2.jar=libraries/sources/commons-logging-1.2-sources.jar
 source.reference.flatlaf-1.6.5.jar=libraries/sources/flatlaf-1.6.5-sources.jar
 source.reference.javafaker-1.0.2.jar=libraries/sources/javafaker-1.0.2-sources.jar
 source.reference.javax.activation-1.2.0.jar=libraries/sources/javax.activation-1.2.0-sources.jar
 source.reference.javax.mail-1.6.2.jar=libraries/sources/javax.mail-1.6.2-sources.jar
 source.reference.mysql-connector-java-8.0.28.jar=libraries/sources/mysql-connector-java-8.0.28-sources.jar
 source.reference.snakeyaml-1.29.jar=libraries/sources/snakeyaml-1.29-sources.jar
-source.reference.xmlrpc-common-3.1.3.jar=libraries/sources/xmlrpc-common-3.1.3-sources.jar
-source.reference.xmlrpc-server-3.1.3.jar=libraries/sources/xmlrpc-server-3.1.3-sources.jar
+source.reference.xmlrpc-2.0.1.jar=libraries/sources/xmlrpc-2.0.1-sources.jar
 src.dir=src
 test.src.dir=test
