Correción sp actualizar datos perfil

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -48,7 +48,7 @@ file.reference.mysql-connector-java-8.0.28.jar=libraries\\libs\\mysql-connector-
 file.reference.snakeyaml-1.29.jar=libraries\\libs\\snakeyaml-1.29.jar
 file.reference.xmlrpc-2.0.1.jar=libraries\\libs\\xmlrpc-2.0.1.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.AbsoluteLayout-RELEASE126.jar}:\
     ${file.reference.flatlaf-1.6.5.jar}:\
