--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -110,7 +110,7 @@ main.class=courseroom_server.CourseRoom_Server
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_17
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
