--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.commons-codec-1.15.jar=libraries\\libs\\commons-codec-1.15.jar
 file.reference.commons-io-2.11.0.jar=libraries\\libs\\commons-io-2.11.0.jar
 file.reference.commons-lang3-3.12.0.jar=libraries\\libs\\commons-lang3-3.12.0.jar
 file.reference.commons-logging-1.1.jar=libraries\\libs\\commons-logging-1.1.jar
+file.reference.engine.jar=libraries\\libs\\engine.jar
 file.reference.flatlaf-1.6.5.jar=libraries\\libs\\flatlaf-1.6.5.jar
 file.reference.javafaker-1.0.2.jar=libraries\\libs\\javafaker-1.0.2.jar
 file.reference.javax.activation-1.2.0.jar=libraries\\libs\\javax.activation-1.2.0.jar
@@ -62,7 +63,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
     ${file.reference.commons-codec-1.15.jar}:\
     ${file.reference.commons-logging-1.1.jar}:\
-    ${file.reference.xmlrpc-2.0.1.jar}
+    ${file.reference.xmlrpc-2.0.1.jar}:\
+    ${file.reference.engine.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
