Correciones conexión matlab

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,6 +42,7 @@ file.reference.commons-lang3-3.12.0.jar=libraries\\libs\\commons-lang3-3.12.0.ja
 file.reference.commons-logging-1.1.jar=libraries\\libs\\commons-logging-1.1.jar
 file.reference.engine.jar=libraries\\libs\\engine.jar
 file.reference.flatlaf-1.6.5.jar=libraries\\libs\\flatlaf-1.6.5.jar
+file.reference.javaenginecore.jar=libraries\\libs\\javaenginecore.jar
 file.reference.javafaker-1.0.2.jar=libraries\\libs\\javafaker-1.0.2.jar
 file.reference.javax.activation-1.2.0.jar=libraries\\libs\\javax.activation-1.2.0.jar
 file.reference.javax.mail-1.6.2.jar=libraries\\libs\\javax.mail-1.6.2.jar
@@ -64,7 +65,8 @@ javac.classpath=\
     ${file.reference.commons-codec-1.15.jar}:\
     ${file.reference.commons-logging-1.1.jar}:\
     ${file.reference.xmlrpc-2.0.1.jar}:\
-    ${file.reference.engine.jar}
+    ${file.reference.engine.jar}:\
+    ${file.reference.javaenginecore.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -112,7 +114,7 @@ main.class=courseroom_server.CourseRoom_Server
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_17
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
